fixed dropdown out of bounds problem

--- a/src/components/dropdown/dropdown.module.css
+++ b/src/components/dropdown/dropdown.module.css
@@ -34,3 +34,8 @@
     left: 0;
     transform: translateX(-25%);
 }
+
+.outOfAllBounds {
+    left: 0;
+    transform: translate(-25%, calc(-100% - 50px));
+}
